--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
-requests==2.31.0
-pyTelegramBotAPI==4.14.0
+pyTelegramBotAPI==4.22.1
+undetected-chromedriver==3.5.5
+selenium==4.25.0
+webdriver-manager==4.0.2
