--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-pyTelegramBotAPI==4.22.1
-undetected-chromedriver==3.5.5
-selenium==4.25.0
-webdriver-manager==4.0.2
+pyTelegramBotAPI
+undetected-chromedriver
+selenium
