--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,1 @@
-# requirements.txt ফাইল বানাও
-cat > requirements.txt << EOF
-python-telegram-bot==21.6
-requests==2.32.3
-beautifulsoup4==4.12.3
-lxml==5.3.0
-EOF
-
-# তারপর ইনস্টল করো
-pip install -r requirements.txt
+pip install pyTelegramBotAPI
